--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,10 @@
 html,body{
-    height:auto;width: 100vw;
+    height:400vh;width: 100vw;
 }
 *{
     margin: 0;padding: 0;
 }
+
 .img{
     width:7vw;
     height:11vh;
@@ -18,9 +19,17 @@ html,body{
 .img-bg{
     height: 100vh;
     width: 100vw;
-    background-image: url(../images/img-bg.png);
-    background-attachment:scroll;
+    filter: blur(5px);
+    z-index: 0;
+    background-image: url(../images/pc-repair-bg.jpeg);
+    background-attachment: scroll;
+    background-repeat: no-repeat;
+    background-size: cover;
+    overflow: hidden;
+    background-position: 0vw -15vh    ;
+    -webkit-filter: blur(2.5px);
 }
+
 body{
     overflow: scroll;
 }
@@ -29,15 +38,11 @@ body{
     position: fixed;
     top:0;
     height: 10vh;
+    z-index: 1;
 }
 
 .background{
     background-color: transparent;
-}
-.flex-horizontal{
-    display: flex;
-    align-items: center;
-    flex-direction: row;
 }
 
 .brand-name-container{
@@ -77,4 +82,53 @@ a:hover{
     -moz-transform: scale(1.1,1.1) ;
     -ms-transform: scale(1.1,1.1) ;
     -o-transform: scale(1.1,1.1) ;
+}
+.company-Info{
+    min-width: 40vw;
+    max-height: 70vh;
+    height: 59%;
+    width: 71%;
+    background-color: #EEC9BC;
+    position: absolute;
+    left: 14vw;
+    top: 26vh;
+    opacity: 0.9;
+}
+
+.company-text{
+    position: relative;
+    left: 24vw;
+    top: 15vh;
+    height: auto;
+    width: auto;
+    font-size: 4em;
+    font-weight: 700;
+    color: blue;
+    font-family: 'Roboto', sans-serif;
+    letter-spacing: 3.2px;
+
+}
+.company-logo{
+    background-image: url(../images/repair.png);
+    width: 26vw;
+    height: 20vw;
+    position: absolute;
+    top: 12vh;
+    left: 4vw;
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+.brand-title{
+    position: relative;
+    left: 53px;
+    top: 5vh;
+}
+
+.brand-tag-line{
+    position: relative;
+    left: 5vw;
+    top: 9vh;
+    font-size: 2rem;
+    letter-spacing: normal;
+    color: darkblue;
 }
