--- a/css/util.css
+++ b/css/util.css
@@ -1,3 +1,6 @@
+*{
+    padding: 0;margin: 0;
+}
 .h1{
     font-size: 2em;
     font-weight: 700;
@@ -26,4 +29,7 @@
     display: flex;
     align-items: center;
     flex-direction: row;
+}
+.bold{
+    font-weight: 900;
 }
