--- a/css/index.css
+++ b/css/index.css
@@ -173,8 +173,8 @@ body{
 .info-box{
     width: 100vw;
     height: 40vh;
-    background-color: grey;
-    color: white;
+    background-color: #B7BC98;
+    color: black;
     font-size: 2vw;
     text-align: center;
     justify-content: center;
@@ -188,7 +188,7 @@ body{
     /* top:31%; */
 }
 .service-panel{
-    background-color: aqua;
+    background-color: #FFF5C5;
     height: 80%;
     width: 100%;
     font-family: 'Roboto', sans-serif;
@@ -202,7 +202,7 @@ body{
 .service-panel>div{
     height: 67vh;
     width: 25vw;
-    background-color: #FC4445;
+    background-color: #44362C;
     display: flex;
     flex-direction: column;
     align-items: center;
