--- a/css/index.css
+++ b/css/index.css
@@ -4,7 +4,10 @@ html,body{
 *{
     margin: 0;padding: 0;
 }
-
+.firstPage{
+    height: 100%;
+    width: 100%;
+}
 .img{
     width: 13vw;
 height: 23vh;
@@ -84,7 +87,7 @@ body{
     -o-transform: scale(1.1,1.1) ;
 }
 .company-Info{
-    min-width: 520px;
+   /*min-width: 520px; */
     /* max-height: 400px; */
     display: flex;
     height: 59vh;
@@ -97,7 +100,7 @@ body{
     align-items: center;
     flex-wrap: wrap;
     align-content: center;
-    justify-content: space-evenly;
+    justify-content: center;
     flex-direction: row;
     animation: fade-in 1s ease-in-out;
     -webkit-animation: fade-in 1s ease-in-out;
@@ -109,20 +112,21 @@ body{
     width: 42vw;
     font-size: 4vw;
     font-weight: 700;
-    min-width: 300px;
+    min-width: fit-content;
     color: blue;
     font-family: 'Roboto', sans-serif;
     letter-spacing: 3.2px;
     flex-direction: column;
-    flex-wrap: wrap;
-    align-items: stretch;
-    align-content: center;
+    flex-wrap: nowrap;
+    align-content: flex-start;
+    justify-content: flex-end;
+    align-items: center;
 
 }
 .company-logo{
     background-image: url(../images/repair.png);
     width: 28%;
-    height: 66%;
+    height: 80%;
     /* position: absolute; */
     /* top: 21%; */
     /* left: 7%; */
@@ -133,8 +137,9 @@ body{
 }
 .brand-title{
     position: relative;
-    left: 53px;
-    top: 5vh;
+    /* left: 51px; */
+    /* top: 5vh; */
+    padding: 15px;
     opacity: 1;
     animation-delay: 2s;
     animation: fade-in 1s ease-in-out;
@@ -160,9 +165,10 @@ body{
 }
 
 .brand-tag-line{
+    
     position: relative;
-    left: 5vw;
-    top: 9vh;
+    /* left: 5vw; */
+    /* top: 9vh; */
     font-size: 2vw;
     letter-spacing: normal;
     color: darkblue;
@@ -175,7 +181,7 @@ body{
     height: 40vh;
     background-color: #B7BC98;
     color: black;
-    font-size: 2vw;
+    font-size: 1.8rem;
     text-align: center;
     justify-content: center;
     display: flex;
@@ -196,19 +202,21 @@ body{
     font-weight: 400;
     justify-content: space-around;
     align-items: center;
-    /* gap: 0.3vh; */
+    flex-wrap: wrap;
+    gap: 1.6vh;
     padding: 7vh 0 7vh 0;
 }
 .service-panel>div{
     height: 67vh;
     width: 25vw;
+    /*  */
     background-color: #44362C;
     display: flex;
     flex-direction: column;
     align-items: center;
     color:azure;
     gap: 0.6vh;
-    font-size: 1.5vw;
+    font-size: 1.9vh;
     text-align: center;
     padding: 2vw;
     box-sizing:content-box;
@@ -231,8 +239,8 @@ body{
     height: 100%;
     background-color:#55BCCC;
     color: white;
-    font-size: 1.5vw;
-    border:0.3vw solid black;
+    font-size: 1.5rem;
+    border:0.3vh solid black;
     border-radius: 6vw;
     -webkit-border-radius: 6vw;
     -moz-border-radius: 6vw;
@@ -247,6 +255,130 @@ body{
     letter-spacing: 0.1vw;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+.products{
+    width: 100vw;
+    height: 100vh;
+    background-color: #FFF5C5;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
 .market-place{
+    background-color: #FFF5C5;
+    height: 80%;
+    width: 100%;
+    font-family: 'Roboto', sans-serif;
+    display: flex;
+    position: relative;
+    font-weight: 400;
+    justify-content: space-around;
+    align-items: center;
+    gap: 1.6vh;
+    overflow: scroll;
+}
+.market-place>div{
+    height: 80%;
+    width: 25%;
+    /* padding:25px; */
+    flex-wrap: wrap;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #44362C;
+    color: aliceblue;
+}
+.Product-Img{
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    padding: 5px;
+}
+.Product-Name{
+    padding: 15px;
+    font-size: 2vh;
+}
+.Product-Price{
+    padding: 15px;
+    font-size: 2vh;
+}
+.Product-Desc{
+    padding: 15px;
+    font-size: 1.8vh;
+}
+.write-up{
+    font-family: 'Roboto', sans-serif;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    align-items: flex-start;
+    height: fit-content;
+    width: fit-content;
+    padding: 15px;
+}
+@media screen and (max-width:1000px) {
+    .service-panel>div{
+        max-height: 470px;
+        min-width: 360px;
+    }
+    .market-place>div{
+        max-height: 500px;
+        min-width: 500px;
+        position: relative;
+        left:10vw;
+    }
+    .info-box{
+        font-size: 1.3rem;
+    }
+    
 
+}
+@media screen and (max-width:500px){
+    .service-panel>div{
+        max-height: 470px;
+        min-width: 360px;
+    }
+    .company-Info{
+    height: 50vh;
+    align-content:center;
+}
+.company-text{
+    height: 15vh;
+    font-size: 1.2rem;
+}
+.brand-tag-line{
+    font-size: 0.8rem;
+    letter-spacing: 0;
+}
+    .market-place>div{
+        max-height: 500px;
+        min-width: 400px;
+        position: absolute;
+        left: 100%;
+        
+    }
+    .info-box{
+        font-size: 1.3rem;
+    }
+    .market-place>div{
+        max-height: 500px;
+        min-width: 400px;
+        position: relative;
+        left: 100%;   
+    }
+}
+.market_title{
+    position: relative;
+    font-size: 2.5rem;
+    font-weight: 700;
+    /* left: 51px; */
+    /* top: 5vh; */
+    padding: 15px;
+    letter-spacing: 3.2px;
+    color:black;
+    opacity: 1;
+    animation-delay: 2s;
+    animation: fade-in 1s ease-in-out;
+    -webkit-animation: fade-in 1s ease-in-out;
 }
