updated website query form remaining

--- a/css/index.css
+++ b/css/index.css
@@ -126,7 +126,7 @@ body{
 .company-logo{
     background-image: url(../images/repair.png);
     width: 28%;
-    height: 80%;
+    height: 66%;
     /* position: absolute; */
     /* top: 21%; */
     /* left: 7%; */
@@ -257,7 +257,7 @@ body{
 }
 .products{
     width: 100vw;
-    height: 100vh;
+    height: 80vh;
     background-color: #FFF5C5;
     display: flex;
     flex-direction: column;
@@ -276,36 +276,39 @@ body{
     align-items: center;
     gap: 1.6vh;
     overflow: scroll;
+
 }
 .market-place>div{
     height: 80%;
     width: 25%;
-    /* padding:25px; */
-    flex-wrap: wrap;
+    padding:15px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
     background-color: #44362C;
     color: aliceblue;
+    box-sizing: border-box;
 }
 .Product-Img{
     background-size: contain;
     background-repeat: no-repeat;
     background-attachment: scroll;
-    padding: 5px;
+    height: 40%;
+    width: 50%;
 }
+
 .Product-Name{
     padding: 15px;
-    font-size: 2vh;
+    font-size: 1.8rem;
 }
 .Product-Price{
     padding: 15px;
-    font-size: 2vh;
+    font-size: 1.5rem;
 }
 .Product-Desc{
     padding: 15px;
-    font-size: 1.8vh;
+    font-size: 1.5rem;
 }
 .write-up{
     font-family: 'Roboto', sans-serif;
@@ -322,15 +325,50 @@ body{
         max-height: 470px;
         min-width: 360px;
     }
+    .market-place{
+        height: 50vh;
+    }
+   
     .market-place>div{
         max-height: 500px;
-        min-width: 500px;
+        min-width: fit-content;
         position: relative;
-        left:10vw;
+        left:50%;
     }
     .info-box{
         font-size: 1.3rem;
     }
+    .Product-Name{
+        padding: 15px;
+        font-size: 4vw;
+    }
+    .Product-Price{
+        padding: 15px;
+        font-size: 3.8vw;
+    }
+    .Product-Desc{
+        padding: 15px;
+        font-size: 3.8vw;
+    }
+    .company-Info{
+        height: 50vh;
+        align-content:center;
+    }
+    .company-logo{
+        height: 45%;
+        width:55%;
+    }
+    .company-text{
+        height: 15vh;
+        font-size: 1.3rem;
+    }
+    .brand-tag-line{
+        font-size: 0.8rem;
+        letter-spacing: 0;
+    }
+        .info-box{
+            font-size: 1.3rem;
+        }
     
 
 }
@@ -339,25 +377,27 @@ body{
         max-height: 470px;
         min-width: 360px;
     }
+
     .company-Info{
     height: 50vh;
     align-content:center;
 }
+.company-logo{
+    height: 45%;
+    width:55%;
+}
 .company-text{
     height: 15vh;
-    font-size: 1.2rem;
+    font-size: 1.3rem;
 }
 .brand-tag-line{
     font-size: 0.8rem;
     letter-spacing: 0;
 }
-    .market-place>div{
-        max-height: 500px;
-        min-width: 400px;
-        position: absolute;
-        left: 100%;
-        
-    }
+
+.products{
+    height: fit-content;
+}
     .info-box{
         font-size: 1.3rem;
     }
@@ -381,4 +421,21 @@ body{
     animation-delay: 2s;
     animation: fade-in 1s ease-in-out;
     -webkit-animation: fade-in 1s ease-in-out;
+}
+
+.Form-Mobile{
+position:relative;
+height:100%;
+width: 100%;
+top:75px;
+box-sizing: border-box;
+}
+.back{
+   height: 75px;
+   width: 70px;
+ position: absolute;
+   top: 0;
+    left: 0;
+    background-image: url(../images/back.png);
+    background-size: contain;
 }
