--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,12 @@
+.market-place::-webkit-scrollbar{
+    display:none;
+}
+.market-place{
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
 html,body{
-    height:auto;width:100vw;
+    height:auto;width:100%;
 }
 *{
     margin: 0;padding: 0;
@@ -181,7 +188,7 @@ body{
     height: 40vh;
     background-color: #B7BC98;
     color: black;
-    font-size: 1.8rem;
+    font-size: 2rem;
     text-align: center;
     justify-content: center;
     display: flex;
@@ -209,7 +216,7 @@ body{
 .service-panel>div{
     height: 67vh;
     width: 25vw;
-    /*  */
+    
     background-color: #44362C;
     display: flex;
     flex-direction: column;
@@ -230,7 +237,7 @@ body{
     background-repeat: no-repeat;
     background-size: contain;
 }
-.service-panel>div>a{
+.butt-cont{
     height: 13%;
     width: 68%;
 }
@@ -275,13 +282,16 @@ body{
     justify-content: space-around;
     align-items: center;
     gap: 1.6vh;
-    overflow: scroll;
+    overflow-x: scroll;
 
 }
 .market-place>div{
     height: 80%;
     width: 25%;
     padding:15px;
+    /* min-width: 55vw; */
+    /* left:30%; */
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -320,10 +330,34 @@ body{
     width: fit-content;
     padding: 15px;
 }
+@media screen and (max-width:1500px) {
+    .service-panel>div{
+    max-height: 53vh;
+    min-width:55vw;
+    }
+    .market-place>div{
+        max-height: 55vh;
+        min-width: 700px;
+        position: relative;
+        left:38%;
+    }
+    .company-Info{
+        top:17%
+    }
+    .company-logo{
+        position: absolute;
+        left:30%;
+        width:37%;
+    }
+    .company-text{
+        position: relative;
+        top:10%;
+        
+    }
+}
 @media screen and (max-width:1000px) {
     .service-panel>div{
-        max-height: 470px;
-        min-width: 360px;
+        min-width: 55vw;
     }
     .market-place{
         height: 50vh;
@@ -331,9 +365,8 @@ body{
    
     .market-place>div{
         max-height: 500px;
-        min-width: fit-content;
         position: relative;
-        left:50%;
+        left:38%;
     }
     .info-box{
         font-size: 1.3rem;
@@ -427,15 +460,58 @@ body{
 position:relative;
 height:100%;
 width: 100%;
-top:75px;
+/* top:75px; */
 box-sizing: border-box;
 }
+
 .back{
-   height: 75px;
-   width: 70px;
- position: absolute;
-   top: 0;
-    left: 0;
+    height: 87px;
+    width: 87px;
+    position: relative;
+    /* top: 43px; */
+    right: 245px;
     background-image: url(../images/back.png);
     background-size: contain;
+}
+button,
+input,
+select,
+textarea {
+  font-family: inherit;
+  font-size: 100%;
+  font-weight: 300;
+  width: 100%;
+}
+label{
+    padding: 10px;
+    width: 80%;
+}
+input{
+    padding:10px;
+   
+}
+
+input:focus,
+textarea:focus {
+  color: white;
+  background: rgba(0, 0, 0, 0.1);
+border: cyan 5px ;
+}
+input[type=submit]{
+    padding: 5px;
+    width: 50%;
+    height: 95%;
+    font: bold 1.7rem sans-serif;
+    border: 0.2rem solid #040404;
+    border-radius: 95vw;
+    background: #10a8b8;
+    color: white;
+    cursor: pointer;
+    /* transform: rotate(-1.5deg);*/
+}
+input[type=submit]:hover,
+input[type=submit]:focus{
+    outline: none;
+    background: #000;
+    color: #fff;
 }
