added reponsive changes partially

--- a/css/index.css
+++ b/css/index.css
@@ -1,10 +1,10 @@
-.market-place::-webkit-scrollbar{
+/* .market-place::-webkit-scrollbar{
     display:none;
 }
 .market-place{
     -ms-overflow-style: none;
     scrollbar-width: none;
-}
+} */
 html,body{
     height:auto;width:100%;
 }
@@ -14,17 +14,27 @@ html,body{
 .firstPage{
     height: 100%;
     width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .img{
-    width: 13vw;
-height: 23vh;
+    width: 100%;
+height: 100%;
 position: relative;
-top: -1vh;
+/* top: 1vh; */
 transition: scale 0.1s;
 -webkit-transition: scale 0.1s;
 -moz-transition: scale 0.1s;
 -ms-transition: scale 0.1s;
 -o-transition: scale 0.1s;
+}
+.brand-logo{
+    min-width: 60px;
+    min-height: 60px;
+    height: 8vh;
+    width: 5vw;
+    padding: 10px 0 5px 0;
 }
 .img-bg{
     height: 100vh;
@@ -48,6 +58,7 @@ body{
     position: fixed;
     top:0;
     height: 10vh;
+    min-height: 80px;
     z-index: 1;
 }
 
@@ -57,21 +68,26 @@ body{
 
 .brand-name-container{
     position: relative;
-    right:-6vw;
+    justify-self: left;
+    padding:0 10px 0 10px;
+    right:120px;
+    
 }
 .nav-links-cont{
-    left: 49vw;
+    /* left: 49vw; */
     gap: 7vw;
     position: relative;
+    padding: 15px;
 }
 .navlink-cont{
     list-style-type: none;
     height: 100%;
     width: 100%;
+    justify-content: space-around;
 }
 .nav-links-cont>li>a{
     opacity: 0.8;
-    font-size: 1.5vw;
+    font-size: 1.5rem;
     font-family: 'Roboto', sans-serif;
     color:white;
     letter-spacing: 1.5px;
@@ -84,7 +100,7 @@ body{
 }
 .nav-links-cont>li>a:hover{
     opacity: 1;
-    font-size:1.6vw;
+    font-size:1.6rem;
 }
 .img:hover{
     transform: scale(1.1,1.1) ;
@@ -101,8 +117,6 @@ body{
     width: 71vw;
     background-color: #EEC9BC;
     position: absolute;
-    left: 15%;
-    top: 25%;
     opacity: 0.9;
     align-items: center;
     flex-wrap: wrap;
@@ -258,68 +272,6 @@ body{
     padding: 10px;
     opacity: 1;
 }
-.title>h2{
-    letter-spacing: 0.1vw;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-.products{
-    width: 100vw;
-    height: 80vh;
-    background-color: #FFF5C5;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-}
-.market-place{
-    background-color: #FFF5C5;
-    height: 80%;
-    width: 100%;
-    font-family: 'Roboto', sans-serif;
-    display: flex;
-    position: relative;
-    font-weight: 400;
-    justify-content: space-around;
-    align-items: center;
-    gap: 1.6vh;
-    overflow-x: scroll;
-
-}
-.market-place>div{
-    height: 80%;
-    width: 25%;
-    padding:15px;
-    /* min-width: 55vw; */
-    /* left:30%; */
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    background-color: #44362C;
-    color: aliceblue;
-    box-sizing: border-box;
-}
-.Product-Img{
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-attachment: scroll;
-    height: 40%;
-    width: 50%;
-}
-
-.Product-Name{
-    padding: 15px;
-    font-size: 1.8rem;
-}
-.Product-Price{
-    padding: 15px;
-    font-size: 1.5rem;
-}
-.Product-Desc{
-    padding: 15px;
-    font-size: 1.5rem;
-}
 .write-up{
     font-family: 'Roboto', sans-serif;
     display: flex;
@@ -331,10 +283,13 @@ body{
     padding: 15px;
 }
 @media screen and (max-width:1500px) {
+    
+
     .service-panel>div{
     max-height: 53vh;
     min-width:55vw;
     }
+
     .market-place>div{
         max-height: 55vh;
         min-width: 700px;
@@ -408,12 +363,19 @@ body{
 @media screen and (max-width:500px){
     .service-panel>div{
         max-height: 470px;
-        min-width: 360px;
+        min-width: 320px;
     }
-
+    .brand-logo{
+        height: 8vh;
+        width: 15vw;
+        padding: 10px 0 5px 0;
+    }
     .company-Info{
     height: 50vh;
     align-content:center;
+}
+.brand-name-container{
+    right: 0px;
 }
 .company-logo{
     height: 45%;
@@ -427,33 +389,13 @@ body{
     font-size: 0.8rem;
     letter-spacing: 0;
 }
-
-.products{
-    height: fit-content;
+.nav-links-cont>li>a{
+    font-size: 0.8rem;
+    
 }
-    .info-box{
-        font-size: 1.3rem;
-    }
-    .market-place>div{
-        max-height: 500px;
-        min-width: 400px;
-        position: relative;
-        left: 100%;   
-    }
+.nav-links-cont>li>a:hover{
+    font-size:1rem;
 }
-.market_title{
-    position: relative;
-    font-size: 2.5rem;
-    font-weight: 700;
-    /* left: 51px; */
-    /* top: 5vh; */
-    padding: 15px;
-    letter-spacing: 3.2px;
-    color:black;
-    opacity: 1;
-    animation-delay: 2s;
-    animation: fade-in 1s ease-in-out;
-    -webkit-animation: fade-in 1s ease-in-out;
 }
 
 .Form-Mobile{
@@ -465,8 +407,8 @@ box-sizing: border-box;
 }
 
 .back{
-    height: 12%;
-    width: 14%;
+    height: 50px;
+    width: 45px;
     position: relative;
     /* top: 43px; */
     right: 38%;
@@ -490,7 +432,9 @@ label{
     width: 80%;
 }
 input{
-    padding:10px;
+    /* padding:10px; */
+    padding-top: 5px;
+    padding-bottom: 5px;
    
 }
 
@@ -508,6 +452,7 @@ input[type=submit]{
     border: 0.2rem solid #040404;
     border-radius: 95vw;
     background: #10a8b8;
+    background-color: #10a8b8;
     color: white;
     cursor: pointer;
     /* transform: rotate(-1.5deg);*/
