--- a/css/index.css
+++ b/css/index.css
@@ -154,6 +154,12 @@ transition: scale 0.1s;
     animation: fade-in 1s ease-in-out;
     -webkit-animation: fade-in 1s ease-in-out;
 }
+.title{
+    letter-spacing: 1px;
+}
+.text{
+    text-align:justify;
+}
 .brand-title{
     position: relative;
     /* left: 51px; */
@@ -226,7 +232,7 @@ transition: scale 0.1s;
     padding: 7vh 0 7vh 0;
 }
 .service-panel>div{
-    height: 67vh;
+    height: 70vh;
     width: 25vw;
     
     background-color: #44362C;
@@ -235,7 +241,7 @@ transition: scale 0.1s;
     align-items: center;
     color:azure;
     gap: 0.6vh;
-    font-size: 1.9vh;
+    font-size: 2.5vh;
     text-align: center;
     padding: 2vw;
     box-sizing:content-box;
@@ -244,8 +250,8 @@ transition: scale 0.1s;
     -webkit-animation: fade-in 1s ease-in-out;
 }
 .img-cont{
-    width: 61%;
-    height: 49%;
+    width: 70%;
+    height: 45%;
     background-repeat: no-repeat;
     background-size: contain;
 }
@@ -279,15 +285,6 @@ transition: scale 0.1s;
     height: fit-content;
     width: fit-content;
     padding: 15px;
-}
-@media screen and (max-width:1500px) {
-    
-
-    .service-panel>div{
-    max-height: 53vh;
-    min-width:55vw;
-    }
-
 }
 
 @media screen and (max-width:1000px) {
@@ -331,7 +328,7 @@ transition: scale 0.1s;
 }
 @media screen and (max-width:500px){
     .service-panel>div{
-        max-height: 470px;
+        max-height: 550px;
         min-width: 320px;
     }
     .img-bg{
